--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.2.3
 django-excel-response==2.0.5
+django-filter==2.4.0
 django-pdfkit==0.3.1
 django-templated-mail==1.1.1
 django-wkhtmltopdf==3.3.0
@@ -29,6 +30,7 @@ Pillow==8.2.0
 psycopg2==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
+pyTelegramBotAPI==3.8.1
 python-dotenv==0.17.1
 python3-openid==3.2.0
 pytz==2021.1
