--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
+amqp==5.0.6
 asgiref==3.3.4
+billiard==3.6.4.0
+celery==5.1.2
 certifi==2021.5.30
 cffi==1.14.5
 chardet==4.0.0
+click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==3.4.7
@@ -22,11 +29,13 @@ isort==5.8.0
 itypes==1.2.0
 jdcal==1.4.1
 Jinja2==3.0.1
+kombu==5.1.0
 MarkupSafe==2.0.1
 oauthlib==3.1.1
 openpyxl==2.4.11
 pdfkit==0.6.0
 Pillow==8.2.0
+prompt-toolkit==3.0.19
 psycopg2==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
@@ -34,6 +43,7 @@ pyTelegramBotAPI==3.8.1
 python-dotenv==0.17.1
 python3-openid==3.2.0
 pytz==2021.1
+redis==3.5.3
 requests==2.25.1
 requests-oauthlib==1.3.0
 six==1.16.0
@@ -43,4 +53,6 @@ sorl-thumbnail==12.7.0
 sqlparse==0.4.1
 uritemplate==3.0.1
 urllib3==1.26.5
+vine==5.0.0
+wcwidth==0.2.5
 wkhtmltopdf==0.2
