--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ openpyxl==2.4.11
 pdfkit==0.6.0
 Pillow==8.2.0
 prompt-toolkit==3.0.19
-psycopg2==2.9.1
+psycopg2-binary==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
 pyTelegramBotAPI==3.8.1
