--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,9 @@ djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.1
 djoser==2.1.0
 et-xmlfile==1.1.0
+flower==1.0.0
 gunicorn==20.1.0
+humanize==3.10.0
 idna==2.10
 isort==5.8.0
 itypes==1.2.0
@@ -35,6 +37,7 @@ oauthlib==3.1.1
 openpyxl==2.4.11
 pdfkit==0.6.0
 Pillow==8.2.0
+prometheus-client==0.11.0
 prompt-toolkit==3.0.19
 psycopg2-binary==2.9.1
 pycparser==2.20
@@ -51,6 +54,7 @@ social-auth-app-django==4.0.0
 social-auth-core==4.1.0
 sorl-thumbnail==12.7.0
 sqlparse==0.4.1
+tornado==6.1
 uritemplate==3.0.1
 urllib3==1.26.5
 vine==5.0.0
