--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ coreschema==0.0.4
 cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.2.3
+django-cors-headers==3.7.0
 django-excel-response==2.0.5
 django-filter==2.4.0
 django-pdfkit==0.3.1
@@ -22,11 +23,13 @@ django-wkhtmltopdf==3.3.0
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.7.1
 djoser==2.1.0
+drf-yasg==1.20.0
 et-xmlfile==1.1.0
 flower==1.0.0
 gunicorn==20.1.0
 humanize==3.10.0
 idna==2.10
+inflection==0.5.1
 isort==5.8.0
 itypes==1.2.0
 jdcal==1.4.1
@@ -35,6 +38,7 @@ kombu==5.1.0
 MarkupSafe==2.0.1
 oauthlib==3.1.1
 openpyxl==2.4.11
+packaging==21.0
 pdfkit==0.6.0
 Pillow==8.2.0
 prometheus-client==0.11.0
@@ -42,6 +46,7 @@ prompt-toolkit==3.0.19
 psycopg2-binary==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
+pyparsing==2.4.7
 pyTelegramBotAPI==3.8.1
 python-dotenv==0.17.1
 python3-openid==3.2.0
@@ -49,6 +54,8 @@ pytz==2021.1
 redis==3.5.3
 requests==2.25.1
 requests-oauthlib==1.3.0
+ruamel.yaml==0.17.10
+ruamel.yaml.clib==0.2.6
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
