--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,35 +1,48 @@
 version: '3.7'
 services:
-  redis:
-    image: redis
-    restart: always
-    container_name: 'redis'
-    command: redis-server
-    ports:
-      - '6379:6379'
+  db:
+    image: postgres:12.4
+    container_name: 'database'
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
   web:
     build: .
     restart: always
     container_name: 'traker'
-    command:
-      - python3 manage.py runserver 0.0.0.0:8000
-      - python3 manage.py runbot
+    command: python manage.py runserver 0:8000
     volumes:
       - static_value:/code/static/
       - media_value:/code/media/
     ports:
       - '8000:8000'
+    depends_on:
+      - db
     env_file:
       - ./.env
-  celery:
+  bot:
     build: .
-    container_name: 'celery'
-    command: celery -A traker worker -B
-    links:
-      - redis
+    restart: always
+    container_name: 'bot'
+    command: python manage.py runbot
+    volumes:
+      - static_value:/code/static/
+      - media_value:/code/media/
+    env_file:
+      - ./.env
+  nginx:
+    image: nginx:1.19.3
+    container_name: 'nginx_server'
+    ports:
+      - '80:80'
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
     depends_on:
       - web
-      - redis
 volumes:
   static_value:
   media_value:
+  postgres_data:
