--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,7 +3,7 @@ server {
 
     server_tokens off;
 
-    server_name 127.0.0.1;
+    server_name 178.74.104.246 www.trythis.ru.com trythis.ru.com;
 
     location /static/ {
         root /var/html/;
