--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,13 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./.env
+  redis:
+    image: redis
+    restart: always
+    container_name: 'redis'
+    command: redis-server
+    ports:
+      - '6379:6379'
   web:
     build: .
     restart: always
@@ -42,6 +49,28 @@ services:
       - media_value:/var/html/media/
     depends_on:
       - web
+  celery:
+    build: .
+    container_name: 'celery'
+    command: celery -A traker worker -l info
+    volumes:
+      - .:/code
+    links:
+      - redis
+    depends_on:
+      - web
+      - redis
+  celery-beat:
+    build: .
+    container_name: 'celery-beat'
+    command: celery -A traker beat -l info
+    volumes:
+      - .:/code
+    links:
+      - redis
+    depends_on:
+      - web
+      - redis
 volumes:
   static_value:
   media_value:
