--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ click-plugins==1.1.1
 click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
+coverage==5.5
 cryptography==3.4.7
 defusedxml==0.7.1
 Django==3.2.3
