added secret for flow 3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
         run: |
           python -m flake8
           python manage.py test
-        with:
+        env:
           SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
