--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,23 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    strategy:
+      max-parallel: 4
+      matrix:
+        db: postgres
+        python-version: 3.8
+        include:
+          - db: ${{ secrets.DB_NAME }}
+            db_port: ${{ secrets.DB_PORT }}
+
+    services:
+      postgres:
+        image: postgres:12.4
+        env:
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+        ports:
+          - ${{ secrets.DB_PORT }}:${{ secrets.DB_PORT }}
 
     steps:
       - uses: actions/checkout@v2
@@ -22,8 +39,14 @@ jobs:
           pip install -r requirements.txt
 
       - name: Test with flake8 and django tests
+        env:
+          SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
+          DB_ENGINE: ${{ secrets.DB_ENGINE }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          DB_HOST: ${{ secrets.DB_HOST_LOCAL }}
+          DB_PORT: ${{ secrets.DB_PORT }}
         run: |
           python -m flake8
           python manage.py test
-        env:
-          SECRET_TOKEN: ${{ secrets.SECRET_TOKEN }}
