--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,8 +10,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        db: postgres
-        python-version: 3.8
+        db: [postgres]
+        python-version: [3.8]
         include:
           - db: ${{ secrets.DB_NAME }}
             db_port: ${{ secrets.DB_PORT }}
