--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,21 @@ jobs:
         run: |
           python -m flake8
           python manage.py test
+  deploy:
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          port: ${{ secrets.PORT }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            cd Report_Traker
+            git pull https://Igorishe:${{ secrets.GITHUB_TOKEN }}@github.com/Igorishe/Report_Traker.git
   send_message:
     runs-on: ubuntu-latest
     needs: tests
