--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,12 @@ jobs:
           script: |
             cd Report_Traker
             git pull https://Igorishe:${{ secrets.GITHUB_TOKEN }}@github.com/Igorishe/Report_Traker.git
+            docker-compose down
+            docker-compose up -d --build
+            docker-compose exec web python manage.py collectstatic --no-input
+            docker-compose exec web python manage.py makemigrations
+            docker-compose exec web python manage.py migrate --noinput
+            docker image prune
   send_message:
     runs-on: ubuntu-latest
     needs: tests
