--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,7 +78,7 @@ jobs:
             docker-compose up -d --build
             docker-compose exec web python manage.py collectstatic --no-input
             docker-compose exec web python manage.py makemigrations
-            docker-compose exec web python manage.py migrate --noinput
+            docker-compose exec web python manage.py migrate
             docker image prune
   send_message:
     runs-on: ubuntu-latest
